syntax = 'proto3';

package SessionSyncModule;

service SessionSync {

  rpc FileTransfer (FileInfo) returns (Null);

}

message Null {} // Response or Reply Message 내용이 필요 없을 때를 위한 메시지 타입 정의

message FileInfo { // key header 인증 절차 필요함
  string file_name = 1; // 트랜잭션 번호 {Timestamp} + {Datamap Filename} + 'SEND'
  bytes file = 2; // 실제 데이터맵 파일 (Rdf 파일) 전송
}
